tests/snapshots/files__fail-typecheck__ungrounded_0.snap
---
source: tests/files.rs
expression: err_msg
---
In 4:1-20 of ungrounded-0.egg: (birewrite (S1 x) x)
Variable x is ungrounded. A variable is grounded when it appears as an argument to a constructor or function in the query, not just under primitives or equalities.
