tests/snapshots/files__fail-typecheck__ungrounded_1.snap
---
source: tests/files.rs
expression: err_msg
---
In 2:1-24 of ungrounded-1.egg: (rule ((= x y)) ((R x)))
Variable x is ungrounded. A variable is grounded when it appears as an argument to a constructor or function in the query, not just under primitives or equalities.
