tests/snapshots/files__fail-typecheck__ungrounded_3.snap
---
source: tests/files.rs
expression: err_msg
---
In 6:1-9:9 of ungrounded-3.egg: (rule
 ((= e1 (F (vec-of "a" "b") (vec-of a b))))
 ((R a)
  (R b)))
Variable b is ungrounded. A variable is grounded when it appears as an argument to a constructor or function in the query, not just under primitives or equalities.
