tests/snapshots/files__fail-typecheck__ungrounded_4.snap
---
source: tests/files.rs
expression: err_msg
---
In 5:1-11:43 of ungrounded-4.egg: (rule
 ((= e1 (F (vec-of "a" "b") (vec-of a b)))
  (= e2 (F (vec-of "a" "b") (vec-of a b)))
  (= e3 (F (vec-of "a" "b") (vec-of a c)))
  (= e4 (F (vec-of "a" "b") (vec-of b c))))
 ((F (vec-of "a" "b" "c") (vec-of a b c))
  (F (vec-of "a" "b" "c") (vec-of a b c))))
Variable c is ungrounded. A variable is grounded when it appears as an argument to a constructor or function in the query, not just under primitives or equalities.
