tests/snapshots/files__fail-typecheck__union_non_sort.snap
---
source: tests/files.rs
expression: err_msg
---
In 5:1-15 of tests/fail-typecheck/union_non_sort.egg: (union (f) (g))
Cannot union values of sort i64
