tests/snapshots/files__fail-typecheck__union_term_constructor.snap
---
source: tests/files.rs
expression: err_msg
---
In 4:1-24 of union_term_constructor.egg: (sort TermSort :nounion)
parse error: usages:
(sort <name>)
(sort <name> :uf <uf-function>)
(sort <name> (<container sort> <argument sort>*))
