tests/snapshots/files__fail-typecheck__unstable_fn_primitive_missing_partial_arg.snap
---
source: tests/files.rs
expression: err_msg
---
All alternative definitions considered failed
  In 18:25-41 of unstable-fn-primitive-missing-partial-arg.egg: (unstable-fn "+")
 Expect expression @unstable-fn_8 to have type I64Add, but get type I64ToI64
  In 18:25-41 of unstable-fn-primitive-missing-partial-arg.egg: (unstable-fn "+")
 Expect expression @unstable-fn_8 to have type F64Add, but get type I64ToI64
  All alternative definitions considered failed
  In 18:25-41 of unstable-fn-primitive-missing-partial-arg.egg: (unstable-fn "+")
 Expect expression __unstable_fn_target_+_I64ToI64_arg_1 to have type String, but get type i64
  In 18:25-41 of unstable-fn-primitive-missing-partial-arg.egg: (unstable-fn "+")
Arity mismatch, expected 2 args: (+ __unstable_fn_target_+_I64ToI64_arg_0)
  In 18:25-41 of unstable-fn-primitive-missing-partial-arg.egg: (unstable-fn "+")
Arity mismatch, expected 2 args: (+ __unstable_fn_target_+_I64ToI64_arg_0)
  In 18:25-41 of unstable-fn-primitive-missing-partial-arg.egg: (unstable-fn "+")
Arity mismatch, expected 2 args: (+ __unstable_fn_target_+_I64ToI64_arg_0)
  In 18:25-41 of unstable-fn-primitive-missing-partial-arg.egg: (unstable-fn "+")
Arity mismatch, expected 2 args: (+ __unstable_fn_target_+_I64ToI64_arg_0)

  In 18:25-41 of unstable-fn-primitive-missing-partial-arg.egg: (unstable-fn "+")
 Expect expression @unstable-fn_8 to have type F64ToF64, but get type I64ToI64
