tests/snapshots/files__fail-typecheck__unstable_fn_wrong_args_type.snap
---
source: tests/files.rs
expression: err_msg
---
Function type mismatch: expected i64 => Math, actual Math => Math
